--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,32 +1,42 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title><%=title %></title>
     <meta charset="utf-8" />
-</head>
-<body>
-     
-    <h1><%=title %> в EJS</h1>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <%- include('header.ejs') %>
 
-    <h3>Велосипеды</h3>
-        <ul>
-            <% for(var i=0; i<bikes.length;i++) {%>
-                <li>
-                    <% if(bikes[i].image) {%>
-                        <img src="<%=bikes[i].image%>" width="200"/>
+    <div class="container-md">
+        <h4 class="my-5">Выберите велосипед</h4>
+        <div class="row row-cols-md-auto">
+          <% bikes.forEach((bike) => {%>
+            <div class="col m-2">
+                <a class="text-decoration-none text-dark" href="/reserve/<%=bike.pk%>">
+                  <div class="card h-100" style="width: 18rem">
+                    <% if (bike.image) { %>
+                    <img src="<%=bike.image%>" class="card-img-top"/>
                     <% } %>
-                    <div>
-                        <%=bikes[i].name%>
+                    <div class="card-body">
+                      <h5 class="card-title"><%=bike.name%></h5>
+                      <p class="card-text"><%=bike.description%></p>
                     </div>
-                    <div>
-                        <%=bikes[i].description%>
-                    </div>
-                    <div>
-                        <a href="">В избранное</a>
-                        <a href="/reserve/<%=bikes[i].pk%>">Выбрать</a>
-                    </div>
-                </li>
-            <%} %>
-        </ul>
-</body>
-<html>
+                  </div>
+                </a>
+            </div>
+          <%}) %>
+        </div>
+    </div>
+  </body>
+</html>
