--- a/src/views/reserve.ejs
+++ b/src/views/reserve.ejs
@@ -1,19 +1,93 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
     <title><%=title %></title>
     <meta charset="utf-8" />
-</head>
-<body>
-    
-    <a href="/">К выбору велосипеда</a>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <%- include('header.ejs') %>
 
-    <h1><%=title %> в EJS</h1>
+    <div class="container-md">
+        
+        
+        <form class="border rounded px-5 pb-5" method="POST">
+        <h3 class="my-3">Заполнение данных для проката</h3>
+        <div>Велосипед: <%=bike_id%></div>
+      <div>
+        <div class="mb-3">
+            <label for="input_last_name" class="form-label">Фамилия</label>
+            <input id="input_last_name" name="last_name" value="<%= old?.last_name || '' %>" class="form-control" required>
+            <% if(errors?.last_name) { %>
+              <div class="error"><%= errors.last_name %></div>
+          <% } %>
+       </div>
+       <div class="mb-3">
+        <label for="input_first_name" class="form-label">Имя</label>
+        <input id="input_first_name" name="first_name" value="<%= old?.first_name || '' %>" class="form-control" required>
+        <% if(errors?.first_name) { %>
+          <div class="error"><%= errors.first_name %></div>
+      <% } %>
+   </div>
+   <div class="mb-3">
+       <label for="input_patronymic" class="form-label">Отчество (при наличии)</label>
+       <input id="input_patronymic" name="patronymic"  value="<%= old?.patronymic || '' %>" class="form-control" required/>
+       <% if(errors?.patronymic) { %>
+         <div class="error"><%= errors.patronymic %></div>
+     <% } %>
 
-    <h3>Заполнение данных для проката</h3>
+   </div>
 
-    <div>
-        Велосипед: <%=bike_id%>
-    </div>
-</body>
-<html>
+      <div class="mb-3">
+        <label for="input_phone" class="form-label">Номер телефона</label>
+        <input
+        id="input_phone"
+          name="phone"
+          type="tel"
+          pattern="^[0-9+\-() ]{6,}$"
+          placeholder="+7 900 123 45 67"
+          value="<%= old?.phone || '' %>"
+          class="form-control"
+          required
+        />
+        <% if(errors?.phone) { %>
+            <div class="error"><%= errors.phone %></div>
+        <% } %>
+      </div>
+
+      <div class="mb-3">
+        <label for="input_start_timestamp" class="form-label">Дата и время начала</label>
+        <input
+        id="input_start_timestamp"
+          name="start_timestamp"
+          type="datetime-local"
+          min="<%= new Date().toISOString().slice(0,16) %>"
+          value="<%= old?.start_timestamp || '' %>"
+          class="form-control"
+          required
+        />
+        <% if(errors?.start_timestamp) { %>
+            <div class="error"><%= errors.start_timestamp %></div>
+        <% } %>
+      </div>
+
+      <div class="mb-3">
+        <label for="input_start_station_id" class="form-label">Пункт проката</label>
+        <select id="input_start_station_id" class="form-select" name="start_station_id">
+          <% stations.forEach(st => { %>
+              <option value="<%= st.pk %>" <%= old?.start_station_id == st.pk ? 'selected' : '' %>><%= st.address %></option>
+          <% }) %>
+        </select>
+      </div>
+
+      <% if (link) { %>
+        <span>Ваша постоянная ссылка для управления прокатом:</span>
+        <a href="<%= link %>"><%= link %></a>
+        <% } else { %>
+            <button type="submit" class="mt-3 btn btn-primary">Забронировать</button>
+      <% } %>
+    </form>
+  </body>
+</div>
+</html>
