--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -31,6 +31,7 @@
                     <div class="card-body">
                       <h5 class="card-title"><%=bike.name%></h5>
                       <p class="card-text"><%=bike.description%></p>
+                      <p class="card-text"><strong>Цена: <%= bike.price_hour %> руб./час</strong></p>
                     </div>
                   </div>
                 </a>
