--- a/src/views/reserve.ejs
+++ b/src/views/reserve.ejs
@@ -11,30 +11,49 @@
 
     <div class="container-md">
         
-        
+        <% if (link) { %>
+            <h5 class="mt-5">
+                <span>Отлично! Управлять арендой можно по ссылке:</span>
+                <a href="<%= link %>"><%= link %></a>
+            </h5>
+            <% } else { %>
+
         <form class="border rounded px-5 pb-5" method="POST">
+            
+        <div class="row">
+            <div class="col-md-4">
+            <% if (bike.image) { %>
+                <img src="<%=bike.image%>" class="card-img-top"/>
+                <% } %>
+            </div>
+            <div class="col-md-8 p-5">
+                <h5 class="card-title"><%=bike.name%></h5>
+                <p class="card-text"><%=bike.description%></p>
+                <p class="card-text"><strong>Цена: <%= bike.price_hour %> руб./час</strong></p>
+            </div>
+        </div>
+        
         <h3 class="my-3">Заполнение данных для проката</h3>
-        <div>Велосипед: <%=bike_id%></div>
       <div>
         <div class="mb-3">
             <label for="input_last_name" class="form-label">Фамилия</label>
             <input id="input_last_name" name="last_name" value="<%= old?.last_name || '' %>" class="form-control" required>
             <% if(errors?.last_name) { %>
-              <div class="error"><%= errors.last_name %></div>
+              <div class="text-danger"><%= errors.last_name %></div>
           <% } %>
        </div>
        <div class="mb-3">
         <label for="input_first_name" class="form-label">Имя</label>
         <input id="input_first_name" name="first_name" value="<%= old?.first_name || '' %>" class="form-control" required>
         <% if(errors?.first_name) { %>
-          <div class="error"><%= errors.first_name %></div>
+          <div class="text-danger"><%= errors.first_name %></div>
       <% } %>
    </div>
    <div class="mb-3">
        <label for="input_patronymic" class="form-label">Отчество (при наличии)</label>
        <input id="input_patronymic" name="patronymic"  value="<%= old?.patronymic || '' %>" class="form-control" required/>
        <% if(errors?.patronymic) { %>
-         <div class="error"><%= errors.patronymic %></div>
+         <div class="text-danger"><%= errors.patronymic %></div>
      <% } %>
 
    </div>
@@ -52,7 +71,7 @@
           required
         />
         <% if(errors?.phone) { %>
-            <div class="error"><%= errors.phone %></div>
+            <div class="text-danger"><%= errors.phone %></div>
         <% } %>
       </div>
 
@@ -68,7 +87,7 @@
           required
         />
         <% if(errors?.start_timestamp) { %>
-            <div class="error"><%= errors.start_timestamp %></div>
+            <div class="text-danger"><%= errors.start_timestamp %></div>
         <% } %>
       </div>
 
@@ -81,13 +100,9 @@
         </select>
       </div>
 
-      <% if (link) { %>
-        <span>Ваша постоянная ссылка для управления прокатом:</span>
-        <a href="<%= link %>"><%= link %></a>
-        <% } else { %>
-            <button type="submit" class="mt-3 btn btn-primary">Забронировать</button>
-      <% } %>
+        <button type="submit" class="mt-3 btn btn-primary">Забронировать</button>
     </form>
+    <% } %>
   </body>
 </div>
 </html>
