--- a/src/views/rent.ejs
+++ b/src/views/rent.ejs
@@ -1,92 +1,97 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <meta charset="utf-8" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
-      crossorigin="anonymous"
-    ></script>
-  </head>
-  <body>
-    <%- include('header.ejs') %>
+    <head>
+        <title><%= title %></title>
+        <meta charset="utf-8" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+            crossorigin="anonymous"
+        ></script>
+    </head>
+    <body>
+        <%- include('header.ejs') %>
 
-    <div class="container-md">
-      <div class="info border rounded p-5">
-        <p><b>Велосипед:</b> <%= bike.name %></p>
-        <p>
-          <b>ФИО:</b> <%= reservation.last_name %> <%= reservation.first_name %>
-          <%= reservation.patronymic %>
-        </p>
-        <p><b>Телефон:</b> <%= reservation.phone %></p>
-        <p>
-          <b>Пункт выдачи:</b>
-          <%= stations.find(s => s.pk === reservation.start_station_id)?.address
-          || reservation.start_station_id %>
-        </p>
-        <% if(reservation.actual_start_timestamp){ %>
-        <p>
-          <b>Время начала:</b> <%= new
-          Date(reservation.actual_start_timestamp).toLocaleString("ru-RU") %>
-        </p>
-        <% } %> <% if(reservation.end_timestamp){ %>
-        <p>
-          <b>Время окончания:</b> <%= new
-          Date(reservation.end_timestamp).toLocaleString("ru-RU") %>
-        </p>
-        <% } %> <% if(reservation.end_station_id){ %>
-        <p>
-          <b>Пункт возврата:</b>
-          <%= stations.find(s => s.pk === reservation.end_station_id)?.address
-          || reservation.end_station_id %>
-        </p>
-        <% if(reservation.bike_price){ %>
-        <p><b>Стоимость проката:</b> <%= reservation.bike_price %> ₽</p>
-        <% } %> <% } %>
-      </div>
+        <div class="container-md">
+            <div class="info border rounded p-5">
+                <p><b>Велосипед:</b> <%= bike.name %></p>
+                <p>
+                    <b>ФИО:</b> <%= reservation.last_name %> <%=
+                    reservation.first_name %> <%= reservation.patronymic %>
+                </p>
+                <p><b>Телефон:</b> <%= reservation.phone %></p>
+                <p>
+                    <b>Пункт выдачи:</b>
+                    <%= stations.find(s => s.pk ===
+                    reservation.start_station_id)?.address ||
+                    reservation.start_station_id %>
+                </p>
+                <% if(reservation.actual_start_timestamp){ %>
+                <p>
+                    <b>Время начала:</b> <%= new
+                    Date(reservation.actual_start_timestamp).toLocaleString("ru-RU")
+                    %>
+                </p>
+                <% } %> <% if(reservation.end_timestamp){ %>
+                <p>
+                    <b>Время окончания:</b> <%= new
+                    Date(reservation.end_timestamp).toLocaleString("ru-RU") %>
+                </p>
+                <% } %> <% if(reservation.end_station_id){ %>
+                <p>
+                    <b>Пункт возврата:</b>
+                    <%= stations.find(s => s.pk ===
+                    reservation.end_station_id)?.address ||
+                    reservation.end_station_id %>
+                </p>
+                <% if(reservation.bike_price){ %>
+                <p><b>Стоимость проката:</b> <%= reservation.bike_price %> ₽</p>
+                <% } %> <% } %>
+            </div>
 
-      <hr />
+            <hr />
 
-      <% if (!reservation.actual_start_timestamp) { %>
-      <h3>Ожидает начала</h3>
-      <p>
-        <b>Забронирован на:</b> <%= new
-        Date(reservation.start_timestamp).toLocaleString("ru-RU") %>
-      </p>
-      <form method="POST">
-        <input type="hidden" name="action" value="start" />
-        <button class="btn btn-primary">Начать аренду</button>
-      </form>
-      <% } else if (!reservation.end_timestamp) { %>
-      <h3>Приятной поездки!</h3>
-      <p>Не забудьте завершить аренду при сдаче велосипеда</p>
-      <form class="border rounded p-5" method="POST">
-        <input type="hidden" name="action" value="end" />
-        <div class="mb-3">
-          <label for="input_station_id" class="form-label">Пункт возврата:</label>
-          <select
-            id="input_station_id"
-            name="station_id"
-            class="form-select"
-            required
-          >
-            <% stations.forEach(st => { %>
-            <option value="<%= st.pk %>"><%= st.address %></option>
-            <% }) %>
-          </select>
+            <% if (!reservation.actual_start_timestamp) { %>
+            <h3>Ожидает начала</h3>
+            <p>
+                <b>Забронирован на:</b> <%= new
+                Date(reservation.start_timestamp).toLocaleString("ru-RU") %>
+            </p>
+            <form method="POST">
+                <input type="hidden" name="action" value="start" />
+                <button class="btn btn-primary">Начать аренду</button>
+            </form>
+            <% } else if (!reservation.end_timestamp) { %>
+            <h3>Приятной поездки!</h3>
+            <p>Не забудьте завершить аренду при сдаче велосипеда</p>
+            <form class="border rounded p-5" method="POST">
+                <input type="hidden" name="action" value="end" />
+                <div class="mb-3">
+                    <label for="input_station_id" class="form-label"
+                        >Пункт возврата:</label
+                    >
+                    <select
+                        id="input_station_id"
+                        name="station_id"
+                        class="form-select"
+                        required
+                    >
+                        <% stations.forEach(st => { %>
+                        <option value="<%= st.pk %>"><%= st.address %></option>
+                        <% }) %>
+                    </select>
+                </div>
+                <button class="btn btn-primary">Завершить прокат</button>
+            </form>
+            <% } else { %>
+            <h3>Завершён</h3>
+            <% } %>
         </div>
-        <button class="btn btn-primary">Завершить прокат</button>
-      </form>
-      <% } else { %>
-      <h3>Завершён</h3>
-      <% } %>
-    </div>
-  </body>
+    </body>
 </html>
