--- a/src/views/reserve.ejs
+++ b/src/views/reserve.ejs
@@ -1,108 +1,171 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%=title %></title>
-    <meta charset="utf-8" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <%- include('header.ejs') %>
+    <head>
+        <title><%=title %></title>
+        <meta charset="utf-8" />
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
+            crossorigin="anonymous"
+        />
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+            crossorigin="anonymous"
+        ></script>
 
-    <div class="container-md">
-        
-        <% if (link) { %>
+        <script>
+            document.addEventListener("DOMContentLoaded", () => {
+                const input = document.getElementById("input_start_timestamp");
+                if (input) {
+                    const now = new Date();
+                    const tzOffset = now.getTimezoneOffset() * 60000;
+                    const localTime = new Date(now - tzOffset);
+                    const localISO = localTime.toISOString().slice(0, 16);
+
+                    input.min = localISO;
+                }
+            });
+        </script>
+    </head>
+    <body>
+        <%- include('header.ejs') %>
+
+        <div class="container-md">
+            <% if (link) { %>
             <h5 class="mt-5">
                 <span>Отлично! Управлять арендой можно по ссылке:</span>
                 <a href="<%= link %>"><%= link %></a>
             </h5>
             <% } else { %>
 
-        <form class="border rounded px-5 pb-5" method="POST">
-            
-        <div class="row">
-            <div class="col-md-4">
-            <% if (bike.image) { %>
-                <img src="<%=bike.image%>" class="card-img-top"/>
-                <% } %>
-            </div>
-            <div class="col-md-8 p-5">
-                <h5 class="card-title"><%=bike.name%></h5>
-                <p class="card-text"><%=bike.description%></p>
-                <p class="card-text"><strong>Цена: <%= bike.price_hour %> руб./час</strong></p>
-            </div>
+            <form class="border rounded px-5 pb-5" method="POST">
+                <div class="row">
+                    <div class="col-md-4">
+                        <% if (bike.image) { %>
+                        <img src="<%=bike.image%>" class="card-img-top" />
+                        <% } %>
+                    </div>
+                    <div class="col-md-8 p-5">
+                        <h5 class="card-title"><%=bike.name%></h5>
+                        <p class="card-text"><%=bike.description%></p>
+                        <p class="card-text">
+                            <strong
+                                >Цена: <%= bike.price_hour %> руб./час</strong
+                            >
+                        </p>
+                    </div>
+                </div>
+
+                <h3 class="my-3">Заполнение данных для проката</h3>
+                <div class="mb-3">
+                    <label for="input_last_name" class="form-label"
+                        >Фамилия <span class="text-danger">*</span></label
+                    >
+                    <input
+                        id="input_last_name"
+                        name="last_name"
+                        value="<%= old?.last_name || '' %>"
+                        class="form-control"
+                        required
+                    />
+                    <% if(errors?.last_name) { %>
+                    <div class="text-danger"><%= errors.last_name %></div>
+                    <% } %>
+                </div>
+                <div class="mb-3">
+                    <label for="input_first_name" class="form-label"
+                        >Имя <span class="text-danger">*</span></label
+                    >
+                    <input
+                        id="input_first_name"
+                        name="first_name"
+                        value="<%= old?.first_name || '' %>"
+                        class="form-control"
+                        required
+                    />
+                    <% if(errors?.first_name) { %>
+                    <div class="text-danger"><%= errors.first_name %></div>
+                    <% } %>
+                </div>
+                <div class="mb-3">
+                    <label for="input_patronymic" class="form-label"
+                        >Отчество (при наличии)</label
+                    >
+                    <input
+                        id="input_patronymic"
+                        name="patronymic"
+                        value="<%= old?.patronymic || '' %>"
+                        class="form-control"
+                    />
+                    <% if(errors?.patronymic) { %>
+                    <div class="text-danger"><%= errors.patronymic %></div>
+                    <% } %>
+                </div>
+
+                <div class="mb-3">
+                    <label for="input_phone" class="form-label"
+                        >Номер телефона
+                        <span class="text-danger">*</span></label
+                    >
+                    <input
+                        id="input_phone"
+                        name="phone"
+                        type="tel"
+                        placeholder="+79001234567"
+                        value="<%= old?.phone || '' %>"
+                        class="form-control"
+                        required
+                    />
+                    <% if(errors?.phone) { %>
+                    <div class="text-danger"><%= errors.phone %></div>
+                    <% } %>
+                </div>
+
+                <div class="mb-3">
+                    <label for="input_start_timestamp" class="form-label"
+                        >Дата и время начала
+                        <span class="text-danger">*</span></label
+                    >
+                    <input
+                        id="input_start_timestamp"
+                        name="start_timestamp"
+                        type="datetime-local"
+                        value="<%= old?.start_timestamp || '' %>"
+                        class="form-control"
+                        required
+                    />
+                    <% if(errors?.start_timestamp) { %>
+                    <div class="text-danger"><%= errors.start_timestamp %></div>
+                    <% } %>
+                </div>
+
+                <div class="mb-3">
+                    <label for="input_start_station_id" class="form-label"
+                        >Пункт проката <span class="text-danger">*</span></label
+                    >
+                    <select
+                        id="input_start_station_id"
+                        class="form-select"
+                        name="start_station_id"
+                    >
+                        <% stations.forEach(st => { %>
+                        <option value="<%= st.pk %>" <%= old?.start_station_id == st.pk ? 'selected' : '' %>><%= st.address %></option>
+                        <% }) %>
+                    </select>
+                </div>
+
+                <button type="submit" class="mt-3 btn btn-primary">
+                    Забронировать
+                </button>
+
+                <div class="mt-3">
+                    <span class="text-danger">*</span> Обязательное для
+                    заполнения поле
+                </div>
+            </form>
+            <% } %>
         </div>
-        
-        <h3 class="my-3">Заполнение данных для проката</h3>
-      <div>
-        <div class="mb-3">
-            <label for="input_last_name" class="form-label">Фамилия</label>
-            <input id="input_last_name" name="last_name" value="<%= old?.last_name || '' %>" class="form-control" required>
-            <% if(errors?.last_name) { %>
-              <div class="text-danger"><%= errors.last_name %></div>
-          <% } %>
-       </div>
-       <div class="mb-3">
-        <label for="input_first_name" class="form-label">Имя</label>
-        <input id="input_first_name" name="first_name" value="<%= old?.first_name || '' %>" class="form-control" required>
-        <% if(errors?.first_name) { %>
-          <div class="text-danger"><%= errors.first_name %></div>
-      <% } %>
-   </div>
-   <div class="mb-3">
-       <label for="input_patronymic" class="form-label">Отчество (при наличии)</label>
-       <input id="input_patronymic" name="patronymic"  value="<%= old?.patronymic || '' %>" class="form-control" required/>
-       <% if(errors?.patronymic) { %>
-         <div class="text-danger"><%= errors.patronymic %></div>
-     <% } %>
-
-   </div>
-
-      <div class="mb-3">
-        <label for="input_phone" class="form-label">Номер телефона</label>
-        <input
-        id="input_phone"
-          name="phone"
-          type="tel"
-          pattern="^[0-9+\-() ]{6,}$"
-          placeholder="+7 900 123 45 67"
-          value="<%= old?.phone || '' %>"
-          class="form-control"
-          required
-        />
-        <% if(errors?.phone) { %>
-            <div class="text-danger"><%= errors.phone %></div>
-        <% } %>
-      </div>
-
-      <div class="mb-3">
-        <label for="input_start_timestamp" class="form-label">Дата и время начала</label>
-        <input
-        id="input_start_timestamp"
-          name="start_timestamp"
-          type="datetime-local"
-          min="<%= new Date().toISOString().slice(0,16) %>"
-          value="<%= old?.start_timestamp || '' %>"
-          class="form-control"
-          required
-        />
-        <% if(errors?.start_timestamp) { %>
-            <div class="text-danger"><%= errors.start_timestamp %></div>
-        <% } %>
-      </div>
-
-      <div class="mb-3">
-        <label for="input_start_station_id" class="form-label">Пункт проката</label>
-        <select id="input_start_station_id" class="form-select" name="start_station_id">
-          <% stations.forEach(st => { %>
-              <option value="<%= st.pk %>" <%= old?.start_station_id == st.pk ? 'selected' : '' %>><%= st.address %></option>
-          <% }) %>
-        </select>
-      </div>
-
-        <button type="submit" class="mt-3 btn btn-primary">Забронировать</button>
-    </form>
-    <% } %>
-  </body>
-</div>
+    </body>
 </html>
